# simple-agent

./: .env.example  chainlit.md  pyproject.toml
simple_agent/: __init__.py  agent.py  app.py  system_prompt.py
