[tool.poetry]
name = "simple-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchain-core = "^0.1.42"
langchain-experimental = "^0.0.57"
openai = "^1.17.1"
chainlit = "^1.0.502"
langchain-community = "^0.0.33"
geopy = "^2.4.1"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "simple_agent:main"
dev = "simple_agent:dev"
